--- a/docs/modules/introduction/pages/overview.adoc
+++ b/docs/modules/introduction/pages/overview.adoc
@@ -2,3 +2,5 @@
 
 JPA Streamer is an extension for JPA provides to allow queries to be expressed as standard Java Streams.
 
+JPA Streamer can be run with many different JPA providers including Hibernate.
+
