Try syntax highlighting

--- a/docs/modules/stream-fundamentals/pages/what_is_a_stream.adoc
+++ b/docs/modules/stream-fundamentals/pages/what_is_a_stream.adoc
@@ -3,6 +3,8 @@ keywords: stream
 author: Per Minborg
 :reftext: What is a Stream?
 :navtitle: What is a Stream?
+:source-highlighter: coderay
+:source-language: java
 
 JPA Streamer is all about Java 8 Streams, that allows you to process data in a declarative way similar to SQL statements. So if you are not familiar with the concept of `Streams`, I encourage you to read this chapter carefully. If you consider yourself a `Stream` expert, feel free to skip directly to the next chapter.
 
