docs: Add page about intermediate operations

--- a/docs/modules/stream-fundamentals/nav.adoc
+++ b/docs/modules/stream-fundamentals/nav.adoc
@@ -1,2 +1,3 @@
 * Stream Fundamentals
 ** xref:what_is_a_stream.adoc[What is a Stream?]
+** xref:intermediate_operations.adoc[Intermediate Operations]
